--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-  "name": "projects",
-  "version": "0.1.0",
+  "name": "@coze/realtime-websocket",
+  "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev -p 5000",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+    "build": "tsc && vite build",
+    "lint": "eslint . --max-warnings 0",
+    "preview": "vite preview",
+    "run-preinstall": "node scripts/preinstall.cjs",
+    "start": "vite --host",
+    "test": "exit 0"
   },
   "dependencies": {
-    "next": "16.0.10",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
-    "@aws-sdk/client-s3": "^3.958.0",
-    "@aws-sdk/lib-storage": "^3.958.0",
-    "drizzle-kit": "^0.31.8",
-    "drizzle-orm": "^0.45.1",
-    "drizzle-zod": "^0.8.3",
-    "@types/pg": "^8.16.0",
-    "pg": "^8.16.3",
-    "zod": "^4.2.1",
-    "coze-coding-dev-sdk": "0.5.0"
+    "@ant-design/icons": "^5.5.1",
+    "@coze/api": "latest",
+    "antd": "^5.21.3",
+    "console-feed": "^3.8.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "~6.28.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.10",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "^8.5.0",
+    "@vitejs/plugin-react": "~4.3.3",
+    "eslint": "9.14.0",
+    "eslint-plugin-react-hooks": "5.1.0-beta-26f2496093-20240514",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "typescript": "^5.2.2",
+    "vite": "^4.2.0"
   }
 }
