feat: 添加项目文件下载功能

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "run-preinstall": "node scripts/preinstall.cjs",
     "start": "vite --host",
+    "dev": "vite --host --port 5000",
     "test": "exit 0"
   },
   "dependencies": {
