--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "9.14.0",
     "eslint-plugin-react-hooks": "5.1.0-beta-26f2496093-20240514",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "react-refresh": "^0.18.0",
     "typescript": "^5.2.2",
     "vite": "^4.2.0"
   }
