--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "antd": "^5.21.3",
     "console-feed": "^3.8.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "~6.28.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.11",
