--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "preview": "vite preview",
     "run-preinstall": "node scripts/preinstall.cjs",
     "start": "vite --host",
-    "dev": "vite --host --port 5000",
     "test": "exit 0"
   },
   "dependencies": {
@@ -18,7 +17,8 @@
     "antd": "^5.21.3",
     "console-feed": "^3.8.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "~6.28.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.11",
@@ -29,7 +29,6 @@
     "eslint": "9.14.0",
     "eslint-plugin-react-hooks": "5.1.0-beta-26f2496093-20240514",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "react-refresh": "^0.18.0",
     "typescript": "^5.2.2",
     "vite": "^4.2.0"
   }
